Installing the necessary plugins and includs & Creating a Structure & Database Connection System

--- a/server.cfg
+++ b/server.cfg
@@ -1,19 +1,40 @@
-echo Executing Server Config...
-rcon_password admin
-maxplayers 50
-port 7777
-hostname 
-gamemode0 gamemode
-filterscripts
-plugins
-announce 0
-chatlogging 0
-weburl novate-source.ru
-onfoot_rate 40
-incar_rate 40
-weapon_rate 40
-stream_distance 300.0
-stream_rate 1000
-maxnpc 0
-logtimeformat [%H:%M:%S]
-language Русский
+echo Executing Server Config... # Это то, что sampserver.exe выводит при загрузке server.cfg. Нет необходимости менять это вообще, т.к. вы будете единственным, кто увидит консоль. По умолчанию выводится Executing Server Config...
+# lanmode 0 # Устаревшая переменная, не имеет эффекта
+maxplayers 50 # Это значение задаёт максимальное количество игроков на сервере; изменяя это число, вы можете изменить число игроков, которое сможет войти в сервер. Максимум 1000 и минимум 1.
+announce 0 # Позволяет отображаться серверу в SA-MP мастер-листе (вкладка "Internet"). Установив 1 это включит его отображение, 0 - отключит.
+query 1 # Позволяет отправлять запросы на сервер. Если это будет отключено, то информация о сервере не будет отображаться в браузере серверов. Установите 1 для выполнения запросов или 0 для их отключения. (Игроки по-прежнему могут войти на сервер, который отключил обработку запросов!)
+port 7777 # Порт, который сервер будет использовать для связи, может быть изменён здесь.
+hostname NoVate Project # Это имя, которое будет отображаться в браузере серверов для просмотра другими пользователями.
+gamemode0 gamemode # Возможность установить gamemode, который будет выполняться, как долго он будет выполняться и в какой последовательности путём изменения этих значений.
+weburl novate-source.ru # Это веб-сайт, который люди могут посетить, чтобы получить более подробную информацию о сервере.
+rcon_password admin # Это пароль, используется для администрирования сервером и использования rcon.
+filterscripts # Фильтрскрипты это скрипты, которые выполняются в фоновом режиме вашего мода, добавляя новые возможности на сервер без редактирования самого режима игры.
+plugins mysql md5 streamer sscanf pawncmd pawnregex YSF # Это позволяет указать плагины, которые предназначены для улучшения игровых режимов и фильтрскриптов. (N) означает название плагина.
+password - # Блокировка сервера паролем является еще одним вариантом, который доступен для rcon администратора сервера. Вы можете использовать эту функцию, чтобы не допускать нежелательных посетителей на сервер. (p) символизирует пароль, который будет использоваться.
+mapname Лос Сантос # Название карты, которое будет отображаться в браузере серверов. (m) обозначает название карты.
+language Русский # Определяет язык, используемый на сервере. Таким образом игроки могут фильтровать серверы по языкам в браузере серверов. Если он не установлен - он будет пустым.
+# bind 127.0.0.1 # Принуждает сервер запускаться только с определённого IP. Этот IP должен соответствовать IP, назначенному сетевой картой сервера. Это полезно для запуска нескольких серверов на одном порту на одном и том же компьютере.
+rcon 0 # Если задан 0, то функция удалённого управления через консоль будет отключена.
+maxnpc 0 # Максимальное количество NPC (ботов), которые могут присоединиться к вашему серверу.
+onfoot_rate 40 # Минимальное время в миллисекундах, через которое клиент будет обновлять сервер с новыми данными во время бега/ходьбы.
+incar_rate 40 # Минимальное время в миллисекундах, через которое клиент будет обновлять сервер с новыми данными во время нахождения в транспорте.
+weapon_rate 40 # Минимальное время в миллисекундах, через которое клиент будет обновлять сервер с новыми данными во время стрельбы из оружия.
+stream_distance 300.0 # Расстояние по осям X, Y плоскостей, на котором объекты сервера будут отображаться для подключенных игроков.
+stream_rate 1000 # Число миллисекунд, которое должно пройти до того, как сервер вновь обновит данные потоковой передачи для каждого игрока.
+timestamp 1 # Включение/Отключение пометки времени.
+logqueries 0 # 0 для отключения, 1 для включения. Это регистрирует все запросы, отправленные игроками на сервер, что значительно полезно во время DDoS атак.
+logtimeformat [%H:%M:%S] # Позволяет настроить формат временной метки (timestamp).
+output 0 # Включение/Отключение дублирования сообщений лога (например, напечатанного с print/printf из режимов игры или logprintf из плагинов) в консоли сервера. Если этот параметр установлен на 0 (по умолчанию), то сообщения печатаются только в лог сервера. Этот параметр работает только на серверах Linux.
+chatlogging 0 # Включение/отключение логирования игрового чата. Полезно отключить для предотвращения увеличения размера логов сервера или если вы имеете своё собственное решение для логирования.
+messageholelimit 3000 # ???
+messageslimit 500 # Максимальное количество сообщений, которые пользователь может отправить за одну секунду.
+lagcompmode 1 # ???
+ackslimit 3000 # ???
+playertimeout 10000 # Время в миллисекундах, после которого игрок будет отключен от сервера с причиной "тайм-аут", если на протяжении этого времени не посылает никаких данных на сервер.
+minconnectiontime 0 # Время в миллисекундах, которое сервер будет ждать, прежде чем принять другое входящее соединение.
+connseedtime 300000 # Используйте, чтобы задать, как часто будет обновляться значение подключений cookie.
+sleep 5 # Время в миллисекундах, на протяжении которого основной sa-mp и raknet сетевой поток будет "спать" (ничего не делать во время каждого цикла синхронизации). Используя более высокие значения, сервер потребует меньшего количества CPU, но качество синхронизации сильно пострадает. Используя более низкие значения, сервер будет потреблять больше ресурсов процессора, но позволит повысить производительность серверной синхронизации. Не рекомендуется изменять это значение, за исключением, если онлайн на вашем сервере очень высок и имеются проблемы со стабильностью fps сервера.
+conncookies 1 # Если задан 0, это отключит систему подключений cookie, добавленную в 0.3.7.
+cookielogging 1 # Если задан 0, это отключит логирование cookies, запрошенных вновь подключившимися игроками.
+db_logging 1 # Логирование ошибок sqlite db_* функций в основной server_log.
+db_log_queries 1 # Логирование всех sqlite db_query() вызовов, включая строку запроса.
