Updated the architecture of the mod

--- a/server.cfg
+++ b/server.cfg
@@ -9,7 +9,7 @@ gamemode0 gamemode # ¬озможность установить gamemode, который будет выполн€тьс€,
 weburl novate-source.ru # Ёто веб-сайт, который люди могут посетить, чтобы получить более подробную информацию о сервере.
 rcon_password admin # Ёто пароль, используетс€ дл€ администрировани€ сервером и использовани€ rcon.
 filterscripts # ‘ильтрскрипты это скрипты, которые выполн€ютс€ в фоновом режиме вашего мода, добавл€€ новые возможности на сервер без редактировани€ самого режима игры.
-plugins mysql md5 streamer sscanf pawncmd pawnregex YSF # Ёто позвол€ет указать плагины, которые предназначены дл€ улучшени€ игровых режимов и фильтрскриптов. (N) означает название плагина.
+plugins mysql md5 crashdetect streamer sscanf pawncmd pawnregex YSF # Ёто позвол€ет указать плагины, которые предназначены дл€ улучшени€ игровых режимов и фильтрскриптов. (N) означает название плагина.
 # password 1111 # Ѕлокировка сервера паролем €вл€етс€ еще одним вариантом, который доступен дл€ rcon администратора сервера. ¬ы можете использовать эту функцию, чтобы не допускать нежелательных посетителей на сервер. (p) символизирует пароль, который будет использоватьс€.
 mapname Ћос —антос # Ќазвание карты, которое будет отображатьс€ в браузере серверов. (m) обозначает название карты.
 language –усский # ќпредел€ет €зык, используемый на сервере. “аким образом игроки могут фильтровать серверы по €зыкам в браузере серверов. ≈сли он не установлен - он будет пустым.
